[package]
name = "subvt-session-validator-performance-updater"
version = "0.24.2"
edition = "2021"
rust-version = "1.67.0"

[dependencies]
anyhow = { workspace = true }
async-trait = "0.1"
lazy_static = { workspace = true }
log = { workspace = true }
once_cell = "1"
subvt-config = { path = "../subvt-config" }
subvt-metrics = { path = "../subvt-metrics" }
subvt-persistence = { path = "../subvt-persistence" }
subvt-service-common = { path = "../subvt-service-common" }
subvt-types = { path = "../subvt-types" }
tokio = { version = "1.47", features = ["full"] }
