[package]
name = "subvt-substrate-client"
version = "0.22.6"
edition = "2021"
rust-version = "1.67.0"

[dependencies]
anyhow = { workspace = true }
async-recursion = "1.0"
frame-metadata = { version = "15.0", features = ["std", "v14"] }
hex = "0.4"
jsonrpsee = { version = "0.24", features = ["full"] }
log = { workspace = true }
parity-scale-codec = { version = "3.6", default-features = false, features = ["derive", "full"] }
rustc-hash = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sp-core = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.16.2" }
subvt-config = { path = "../subvt-config" }
subvt-types = { path = "../subvt-types" }
subvt-utility = { path = "../subvt-utility" }
tokio = { version = "1.41", features = ["full"] }

[dev-dependencies]
hex = "0.4"
subvt-config = { path = "../subvt-config" }
tokio = { version = "1.41", features = ["full"] }