[package]
name = "subvt-substrate-client"
version = "0.23.4"
edition = "2021"
rust-version = "1.67.0"

[dependencies]
anyhow = { workspace = true }
async-recursion = "1.0"
frame-metadata = { version = "15.0", features = ["std", "v14"] }
hex = "0.4"
jsonrpsee = { version = "0.26", features = ["full"] }
log = { workspace = true }
parity-scale-codec = { version = "3.7", default-features = false, features = ["derive", "full"] }
rustc-hash = "2.1"
serde_json = "1.0"
sp-core = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.19.2" }
subvt-config = { path = "../subvt-config" }
subvt-types = { path = "../subvt-types" }
subvt-utility = { path = "../subvt-utility" }
tokio = { version = "1.47", features = ["full"] }

[dev-dependencies]
hex = "0.4"
subvt-config = { path = "../subvt-config" }
tokio = { version = "1.47", features = ["full"] }