[package]
name = "subvt-telegram-bot"
version = "0.16.4"
edition = "2021"
rust-version = "1.67.0"

[dependencies]
anyhow = { workspace = true }
async-recursion = "1.0.0"
async-trait = "0.1"
chrono = "0.4"
frankenstein = { version = "0.24", default-features = false, features = ["async-telegram-trait"] }
futures = "0.3"
hyper = "0.14"
hyper-multipart-rfc7578 = "0.8.0"
hyper-tls = "0.5.0"
itertools = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
once_cell = "1"
regex = "1.6"
rustc-hash = "1.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
subvt-config = { path = "../subvt-config" }
subvt-governance = { path = "../subvt-governance" }
subvt-logging = { path = "../subvt-logging" }
subvt-metrics = { path = "../subvt-metrics" }
subvt-nft = { path = "../subvt-nft" }
subvt-plotter = { path = "../subvt-plotter" }
subvt-persistence = { path = "../subvt-persistence" }
subvt-service-common = { path = "../subvt-service-common" }
subvt-substrate-client = { path = "../subvt-substrate-client" }
subvt-types = { path = "../subvt-types" }
subvt-utility = { path = "../subvt-utility" }
tera = "1.16.0"
thiserror = { workspace = true }
tokio = { version = "1.26", features = ["full"] }

[dev-dependencies]
mockall = "0.11"
mockito = "1"
rand = "0.8.5"