[package]
name = "subvt-telegram-bot"
version = "0.21.0"
edition = "2021"
rust-version = "1.67.0"

[dependencies]
anyhow = { workspace = true }
async-recursion = "1.0"
async-trait = "0.1"
chrono = "0.4"
enum-iterator = "2.0"
frankenstein = { version = "0.32", default-features = false, features = ["async-http-client", "async-telegram-trait"] }
futures = "0.3"
itertools = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
once_cell = "1"
regex = "1.10"
rustc-hash = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
subvt-config = { path = "../subvt-config" }
subvt-governance = { path = "../subvt-governance" }
subvt-logging = { path = "../subvt-logging" }
subvt-metrics = { path = "../subvt-metrics" }
subvt-nft = { path = "../subvt-nft" }
subvt-plotter = { path = "../subvt-plotter" }
subvt-persistence = { path = "../subvt-persistence" }
subvt-service-common = { path = "../subvt-service-common" }
subvt-substrate-client = { path = "../subvt-substrate-client" }
subvt-types = { path = "../subvt-types" }
subvt-utility = { path = "../subvt-utility" }
tera = "1.19"
thiserror = { workspace = true }
tokio = { version = "1.41", features = ["full"] }

[dev-dependencies]
mockall = "0.13"
mockito = "1"
rand = "0.8.5"