[package]
name = "subvt-telegram-bot"
version = "0.24.11"
edition = "2021"
rust-version = "1.67.0"

[dependencies]
anyhow = { workspace = true }
async-recursion = "1.1"
async-trait = "0.1"
chrono = "0.4"
enum-iterator = "2.3"
frankenstein = { version = "0.44", default-features = false, features = ["client-reqwest"] }
itertools = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
once_cell = "1"
regex = "1.11"
rustc-hash = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
subvt-config = { path = "../subvt-config" }
subvt-governance = { path = "../subvt-governance" }
subvt-metrics = { path = "../subvt-metrics" }
subvt-nft = { path = "../subvt-nft" }
subvt-plotter = { path = "../subvt-plotter" }
subvt-persistence = { path = "../subvt-persistence" }
subvt-service-common = { path = "../subvt-service-common" }
subvt-substrate-client = { path = "../subvt-substrate-client" }
subvt-types = { path = "../subvt-types" }
subvt-utility = { path = "../subvt-utility" }
tera = "1.20"
thiserror = { workspace = true }
tokio = { version = "1.47", features = ["full"] }

[dev-dependencies]
mockall = "0.13"
rand = "0.9"