[package]
name = "subvt-telemetry-processor"
version = "0.16.2"
edition = "2021"
rust-version = "1.67.0"

[dependencies]
anyhow = { workspace = true }
async-lock = "2.7"
async-trait = "0.1"
async-tungstenite = { version = "0.20", features = ["tokio-runtime", "tokio-native-tls"] }
futures = "0.3"
lazy_static = { workspace = true }
log = { workspace = true }
once_cell = "1"
rustc-hash = "1.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
subvt-config = { path = "../subvt-config" }
subvt-logging = { path = "../subvt-logging" }
subvt-metrics = { path = "../subvt-metrics" }
subvt-persistence = { path = "../subvt-persistence" }
subvt-service-common = { path = "../subvt-service-common" }
subvt-types = { path = "../subvt-types" }
tokio = { version = "1.26", features = ["full"] }