[package]
name = "subvt-telemetry-processor"
version = "0.23.2"
edition = "2021"
rust-version = "1.67.0"

[dependencies]
anyhow = { workspace = true }
async-lock = "3.4"
async-trait = "0.1"
async-tungstenite = { version = "0.30", features = ["tokio-runtime", "tokio-native-tls"] }
futures = "0.3"
lazy_static = { workspace = true }
log = { workspace = true }
once_cell = "1"
rustc-hash = "2.1"
subvt-config = { path = "../subvt-config" }
subvt-metrics = { path = "../subvt-metrics" }
subvt-persistence = { path = "../subvt-persistence" }
subvt-service-common = { path = "../subvt-service-common" }
subvt-types = { path = "../subvt-types" }
tokio = { version = "1.46", features = ["full"] }