[package]
name = "subvt-types"
version = "0.22.8"
edition = "2021"
rust-version = "1.67.0"

[dependencies]
anyhow = { workspace = true }
chrono = { version = "0.4", default-features = true, features = ["serde"] }
enum-iterator = "2.0"
frame-metadata = { version = "15.0", features = ["std", "v14"] }
frame-support = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.16.5" }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.16.5" }
hex = "0.4"
lazy_static = { workspace = true }
log = { workspace = true }
num-traits = { workspace = true }
pallet-conviction-voting = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.16.5" }
pallet-democracy = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.16.5" }
pallet-identity = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.16.5" }
pallet-im-online = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.16.5" }
pallet-multisig = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.16.5" }
pallet-referenda = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.16.5" }
pallet-staking = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.16.5" }
parity-scale-codec = { version = "3.6", default-features = false, features = ["derive", "full"] }
polkadot-core-primitives = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.16.5" }
polkadot-primitives = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.16.5" }
polkadot-runtime-parachains = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.16.5" }
rustc-hash = "2.0"
scale-info = "2.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sp-consensus-babe = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.16.5" }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.16.5" }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.17.4" }
sp-staking = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.16.5" }
sqlx = { git  = "https://github.com/helikon-labs/sqlx.git", branch = "helikon-increased-field-count", features = ["postgres", "runtime-tokio-rustls", "chrono", "bigdecimal"] }
subvt-proc-macro = { path = "../subvt-proc-macro" }
subvt-utility = { path = "../subvt-utility" }
scale-bits = "0.7"
thiserror = { workspace = true }
