[package]
name = "subvt-types"
version = "0.23.3"
edition = "2021"
rust-version = "1.67.0"

[dependencies]
anyhow = { workspace = true }
chrono = { version = "0.4", default-features = true, features = ["serde"] }
enum-iterator = "2.1"
frame-metadata = { version = "15.0", features = ["std", "v14"] }
frame-support = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.19.2" }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.18.7" }
hex = "0.4"
lazy_static = { workspace = true }
log = { workspace = true }
num-traits = { workspace = true }
pallet-conviction-voting = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.18.7" }
pallet-democracy = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.18.7" }
pallet-identity = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.18.7" }
pallet-im-online = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.18.7" }
pallet-multisig = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.18.7" }
pallet-referenda = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.18.7" }
pallet-staking = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.18.7" }
parity-scale-codec = { version = "3.7", default-features = false, features = ["derive", "full"] }
polkadot-core-primitives = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.18.7" }
polkadot-primitives = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.18.7" }
polkadot-runtime-parachains = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.18.7" }
rustc-hash = "2.1"
scale-info = "2.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sp-consensus-babe = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.18.7" }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.18.7" }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.18.7" }
sp-staking = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.18.7" }
sqlx = { git  = "https://github.com/helikon-labs/sqlx.git", branch = "helikon-increased-field-count", features = ["postgres", "runtime-tokio-rustls", "chrono", "bigdecimal"] }
subvt-proc-macro = { path = "../subvt-proc-macro" }
subvt-utility = { path = "../subvt-utility" }
scale-bits = "0.7"
thiserror = { workspace = true }
