[package]
name = "subvt-validator-details-server"
version = "0.1.2"
edition = "2021"
rust-version = "1.56.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
async-trait = "0.1.52"
bus = "2.2.3"
jsonrpsee = { version = "0.9.0", features = ["full"] }
jsonrpsee-core = "0.9.0"
lazy_static = "1.4.0"
log = "0.4.16"
once_cell = "1.10.0"
redis = "0.21.5"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
subvt-config = { path = "../subvt-config" }
subvt-metrics = { path = "../subvt-metrics" }
subvt-service-common = { path = "../subvt-service-common" }
subvt-types = { path = "../subvt-types" }
subvt-logging = { path = "../subvt-logging" }
tokio = { version = "1.17.0", features = ["full"] }