[package]
name = "subvt-validator-details-server"
version = "0.17.8"
edition = "2021"
rust-version = "1.67.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
async-trait = "0.1"
bus = "2.3"
futures-util = "0.3"
jsonrpsee = { version = "0.16", features = ["full"] }
jsonrpsee-core = "0.16"
lazy_static = { workspace = true }
log = { workspace = true }
once_cell = "1"
redis = { version = "0.23", features = ["tokio-comp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
subvt-config = { path = "../subvt-config" }
subvt-metrics = { path = "../subvt-metrics" }
subvt-service-common = { path = "../subvt-service-common" }
subvt-types = { path = "../subvt-types" }
subvt-logging = { path = "../subvt-logging" }
tokio = { version = "1.26", features = ["full"] }