[package]
name = "subvt-validator-list-server"
version = "0.17.46"
edition = "2021"
rust-version = "1.67.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
async-trait = "0.1"
bus = "2.4"
chrono = "0.4"
clap = "4.4"
env_logger = "0.11"
futures-util = "0.3"
jsonrpsee = { version = "0.23", features = ["full"] }
lazy_static = { workspace = true }
log = { workspace = true }
once_cell = "1"
redis = { version = "0.25", features = ["tokio-comp"] }
rustc-hash = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
subvt-config = { path = "../subvt-config" }
subvt-metrics = { path = "../subvt-metrics" }
subvt-service-common = { path = "../subvt-service-common" }
subvt-types = { path = "../subvt-types" }
subvt-logging = { path = "../subvt-logging" }
tokio = { version = "1.35", features = ["full"] }
