[package]
name = "subvt-validator-list-server"
version = "0.22.7"
edition = "2021"
rust-version = "1.67.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
async-trait = "0.1"
bus = "2.4"
clap = "4.4"
futures-util = "0.3"
jsonrpsee = { version = "0.24", features = ["full"] }
lazy_static = { workspace = true }
log = { workspace = true }
once_cell = "1"
redis = { version = "0.27", features = ["tokio-comp"] }
rustc-hash = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
subvt-config = { path = "../subvt-config" }
subvt-metrics = { path = "../subvt-metrics" }
subvt-service-common = { path = "../subvt-service-common" }
subvt-types = { path = "../subvt-types" }

tokio = { version = "1.41", features = ["full"] }
