[package]
name = "subvt-validator-list-updater"
version = "0.17.13"
edition = "2021"
rust-version = "1.67.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
async-lock = "3.2"
async-trait = "0.1"
chrono = "0.4"
hex = "0.4"
lazy_static = { workspace = true }
log = { workspace = true }
once_cell = "1"
redis = { version = "0.24", features = ["tokio-comp"] }
rustc-hash = "1.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
subvt-config = { path = "../subvt-config" }
subvt-logging = { path = "../subvt-logging" }
subvt-metrics = { path = "../subvt-metrics" }
subvt-persistence = { path = "../subvt-persistence" }
subvt-service-common = { path = "../subvt-service-common" }
subvt-substrate-client = { path = "../subvt-substrate-client" }
subvt-types = { path = "../subvt-types" }
tokio = { version = "1.34", features = ["full"] }
