[package]
name = "subvt-validator-list-updater"
version = "0.24.14"
edition = "2021"
rust-version = "1.67.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
async-lock = "3.4"
async-trait = "0.1"
lazy_static = { workspace = true }
log = { workspace = true }
once_cell = "1"
redis = { version = "0.32", features = ["tokio-comp"] }
rustc-hash = "2.1"
serde_json = "1.0"
subvt-config = { path = "../subvt-config" }
subvt-metrics = { path = "../subvt-metrics" }
subvt-persistence = { path = "../subvt-persistence" }
subvt-service-common = { path = "../subvt-service-common" }
subvt-substrate-client = { path = "../subvt-substrate-client" }
subvt-types = { path = "../subvt-types" }
tokio = { version = "1.47", features = ["full"] }
